add twitter summary card

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_ECLIPSE_FAUCET_URL=http://34.172.85.51:8111
+NEXT_PUBLIC_ECLIPSE_FAUCET_URL=https://eclipse-362422.uc.r.appspot.com/faucet/airdrop
