Manage environment variables in git.
Use .env file for dev, netlify.toml for prod config.

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-NEXT_PUBLIC_ECLIPSE_FAUCET_URL=https://eclipse-362422.uc.r.appspot.com/faucet/airdrop
+# Config for local development. Override in netlify.toml for production env.
+NEXT_PUBLIC_SELF_URL=http://localhost:3000
+NEXT_PUBLIC_ECLIPSE_FAUCET_URL=http://localhost:8080/faucet/airdrop
