--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "ethers": "5.5.4",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-google-recaptcha": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
